# Rc_esp32_removectrl

./: .gitignore
esp32_rc/: CMakeLists.txt  partitions.csv  secure_boot_signing_key.pem
esp32_rc/main/: CMakeLists.txt  esp32_rc.c  idf_component.yml
esp32_rc/main/lcd/: lcd_init.c  lcd_init.h  lvgl_task.c  lvgl_task.h  reset_ui.c
esp32_rc/main/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
esp32_rc/main/ui/components/: ui_comp_hook.c
esp32_rc/main/ui/images/: ui_img_1546938119.c  ui_img_1940168468.c  ui_img_sztu1_png.c
esp32_rc/main/ui/screens/: ui_DataScreen.c  ui_DataScreen.h  ui_Screen1.c  ui_Screen1.h  ui_mainScr.c  ui_mainScr.h  ui_wifiINFOScreen.c  ui_wifiINFOScreen.h
esp32_rc/main/wifi/ap/: ap_connect.c  ap_connect.h  dns_server.c  my_ota.c  my_ota.h  nvs_manager.c  nvs_manager.h  root.html
esp32_rc/main/wifi/sta_communicate/: uart_send_task.c  udp_task.c  udp_task.h
